# mke2

./: .gitignore  CMakeLists.txt  README.md  brick.msh
include/: abstract_local_eq.hpp  abstract_matrix.h  abstract_matrix.hpp  common_types.hpp  constants.hpp  csr_matrix.hpp  debug.h  debug.hpp  dense_matrix.h  dense_matrix.hpp  dok_matrix.hpp  export.hpp  global_eq_builder.hpp  global_indices.hpp  linalg.h  local_eq_gen.hpp  local_eq_v17.hpp  lup_factor.h  lup_factor.hpp  mke2.h  mke2.hpp.xxx  mv2_export.hpp  point3d.h  point3d.hpp  sparce_matrix.h  sparce_matrix.hpp  sparse_matrix.hpp  tetrahedron.h  triang_builder.hpp  triangulation.h  triangulation.hpp  util.h  util.hpp  vec.h  vec.hpp
src/: main.cpp
src/linalg/: abstract_matrix.cpp  csr_matrix.cpp  dense_matrix.cpp  dok_matrix.cpp  lup_factor.cpp  point3d.cpp  solver.cpp  sparce_matrix.cpp  sparce_solve.cpp  sparse_matrix.cpp  sparse_solve.cpp  vec.cpp
src/mke2/: constants.hpp  export.cpp  global_eq_builder.cpp  global_indices.cpp  global_indices.hpp  local_eq_gen.cpp  local_eq_v17.cpp  local_eq_v17.hpp  mke2.cpp  mke2.cpp.xxx  mv2_export.cpp
src/triangulation/: triang_builder.cpp  triangulation.cpp
src/util/: common_types.cpp  util.cpp
test/: CMakeLists.txt
test/src/: test_eq.cpp  test_eq_1.cpp  test_eq_2.cpp  test_eq_simple.cpp  test_eq_third_sep.cpp  test_export.cpp  test_global_eq.cpp  test_lup.cpp  test_sparce.cpp  test_sparse.cpp  test_triang_basic.cpp
